enhance: partially style scrollbar & make sidebar fixed

--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -11,13 +11,15 @@ main {
 }
 
 aside {
-  position: absolute;
+  position: fixed;
   top: 5rem;
+  bottom: 0;
   z-index: var(--z-billing-form);
   display: none;
   max-width: 38.5rem;
-  min-height: 100vh;
+  height: 100%;
   padding: 4rem 4rem 2rem;
+  overflow-y: scroll;
   background-color: var(--background-primary);
   border-top-right-radius: 1.25rem;
   border-bottom-right-radius: 1.25rem;
